welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:5: error: not found: value isFacinTrail
    	if(isFacinTrail()==true){
           ^SlugHunting:17: error: not found: value couleur
		couleur = getCouleurSol()
                ^SlugHunting:20: error: not found: value couleur
		if(couleur == Color.green)
                   ^